syntax = "proto3";

package YellowPages;

message Company {
  string name = 1;
}
